Fixed Modal Window Jitter due to ScrollBar Hide/Show Against Body

--- a/src/assets/styles/settings.sass
+++ b/src/assets/styles/settings.sass
@@ -73,10 +73,6 @@ body
     padding: 12px 25px 14px
     font-size: 18px
 
-    &:hover,
-    &:active
-      background: #ffffff
-
 .btn--header-search
   width: 127px
   height: 32px
